# forgetted

./: .gitignore  CHANGELOG.md  CLAUDE.md  INTENT.md  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
forgetted/: __init__.py  checkpoint.py  cleaner.py  guard.py  trigger.py
incognito/: __init__.py  checkpoint.py  cleaner.py  guard.py  trigger.py
tests/: test_forgetted.py  test_incognito.py
