[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgetted"
version = "0.2.0"
description = "Selective memory governance for AI agents — branch the timeline, never merge back. By Hermes Labs."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Hermes Labs", email = "roli@hermes-labs.ai"},
]
keywords = ["llm", "agent", "memory", "privacy", "ai-safety", "fork", "selective-forget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
trash = ["send2trash>=1.8.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/hermes-labs-ai/forgetted"
Documentation = "https://github.com/hermes-labs-ai/forgetted#readme"
Issues = "https://github.com/hermes-labs-ai/forgetted/issues"
Changelog = "https://github.com/hermes-labs-ai/forgetted/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["forgetted*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP007", "E501"]
